# RGBTrack

./: .gitignore  .gitmodules  README.md  config.example.yaml  generate_image_marker.py  main.py  pyproject.toml
Camera/log/: error_20251222-222827.117995
bundlesdf/: .gitignore
bundlesdf/mycuda/: pyproject.toml  setup.py
docs/: GUIDE.md
resources/: .gitignore
src/: __init__.py  app.py  calibration.py  camera.py  config.py  detection.py  webui.py  zmq_publisher.py  zmq_subscriber.py
