[build-system]
requires = ["setuptools>=61.0", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
description = "CUDA extensions for common operations and grid encoding"
requires-python = ">=3.8"
dependencies = [
    "torch",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
